# site-doc-gen

./: .gitignore  README.md  pyproject.toml
examples/: fetch_github.py  fetch_pydantic.py
site_doc_gen/: __init__.py  cli.py  config.py  core.py  markdown.py  types.py  utils.py
tests/: test_core.py
web_interface/: app.py
web_interface/templates/: base.html  docs.html  home.html
